package multithreading.addersubtractor1;

public class Variable {
    int x;
}
