@startuml

title __ADDERSUBTRACTOR1's Class Diagram__\n

  namespace  {
    namespace ultithreading.addersubtractor1 {
      class multithreading.addersubtractor1.Adder {
          + call()
          ~ Adder()
      }
    }
  }
  

  namespace  {
    namespace ultithreading.addersubtractor1 {
      class multithreading.addersubtractor1.Main {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace ultithreading.addersubtractor1 {
      class multithreading.addersubtractor1.Subtractor {
          + call()
          ~ Subtractor()
      }
    }
  }
  

  namespace  {
    namespace ultithreading.addersubtractor1 {
      class multithreading.addersubtractor1.Variable {
          ~ x : int
      }
    }
  }
  

  multithreading.addersubtractor1.Adder .up.|> java.util.concurrent.Callable
  multithreading.addersubtractor1.Adder o-- multithreading.addersubtractor1.Variable : v
  multithreading.addersubtractor1.Subtractor .up.|> java.util.concurrent.Callable
  multithreading.addersubtractor1.Subtractor o-- multithreading.addersubtractor1.Variable : v


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
